<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.2</version>
        <relativePath/>
    </parent>
    <groupId>ru.nesterov</groupId>
    <artifactId>client-revenue-analyzer</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>client-revenue-analyzer</name>
    <description>client-revenue-analyzer</description>

    <modules>
        <module>core</module>
        <module>calendar-integration</module>
        <module>web</module>
        <module>commons</module>
        <module>telegram-bot</module>
        <module>gigachat-integration</module>
    </modules>

    <properties>
        <java.version>17</java.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <spring.version>3.3.2</spring.version>
        <apache.commons.version>3.17.0</apache.commons.version>
        <google.client-version>1.35.0</google.client-version>
        <google.api-version>v3-rev411-1.25.0</google.api-version>
        <google.oauth2-version>1.24.0</google.oauth2-version>
        <apache.httpcomponents.version>4.5.14</apache.httpcomponents.version>
        <springdoc.version>2.2.0</springdoc.version>
        <reflections.version>0.10.2</reflections.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>ru.nesterov</groupId>
                <artifactId>calendar-integration</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.nesterov</groupId>
                <artifactId>core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.nesterov</groupId>
                <artifactId>gigachat-integration</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.nesterov</groupId>
                <artifactId>commons</artifactId>
                <version>${project.version}</version>
                <scope>compile</scope>
            </dependency>

            <dependency>
                <groupId>com.google.api-client</groupId>
                <artifactId>google-api-client</artifactId>
                <version>${google.client-version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.oauth-client</groupId>
                <artifactId>google-oauth-client</artifactId>
                <version>${google.client-version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.apis</groupId>
                <artifactId>google-api-services-calendar</artifactId>
                <version>${google.api-version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.auth</groupId>
                <artifactId>google-auth-library-oauth2-http</artifactId>
                <version>${google.oauth2-version}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.httpcomponents</groupId>
                <artifactId>httpclient</artifactId>
                <version>${apache.httpcomponents.version}</version>
            </dependency>

            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>

            <dependency>
                <groupId>org.reflections</groupId>
                <artifactId>reflections</artifactId>
                <version>${reflections.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
